gcc/testsuite/gcc.dg/lto/20091005-1_1.c
@@ -1,0 +1,2 @@
+extern int i[10];
+int main () { return i[0]; }
